--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
   text-decoration: none;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 body{
   font-family: "Familjen Grotesk", sans-serif;
