--- a/src/pages/MainScreen/styles.module.scss
+++ b/src/pages/MainScreen/styles.module.scss
@@ -5,6 +5,9 @@
   background-color: $yellow;
   min-height: 100dvh;
   min-width: 100dvw;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .topLogo {
@@ -71,6 +74,7 @@
 .history {
   margin-top: 12px;
   display: flex;
+  flex: 1;
   flex-direction: column;
   gap: 6px;
 }
@@ -109,4 +113,27 @@
   font-size: 14px;
   font-weight: 500;
   color: #5B5B5B;
+}
+.cost{
+  font-size: 18px;
+  font-weight: bold;
+}
+.appBar{
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  gap: 26px;
+  padding: 12px;
+  border-radius: 12px;
+}
+.item{
+  min-width: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  span{
+    font-size: 12px;
+    font-weight: 600;
+  }
 }
