--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&display=swap');
+@import '@/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 *{
   list-style: none;
   text-decoration: none;
@@ -7,5 +8,7 @@
   box-sizing: border-box;
 }
 body{
-  font-family: "Familjen Grotesk", sans-serif;
+  font-family: "Raleway", sans-serif;
+  background-color: $black;
+  color: $white;
 }
