--- a/src/pages/MainScreen/styles.module.scss
+++ b/src/pages/MainScreen/styles.module.scss
@@ -2,24 +2,16 @@
 
 .mainScreen {
   padding: 12px;
-  background-color: $yellow;
-  min-height: 100dvh;
-  min-width: 100dvw;
+  height: 100dvh;
+  width: 100dvw;
   display: flex;
   flex-direction: column;
 
 }
-
-.topLogo {
+.logoTop{
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 6px;
 }
-
-.logoText {
-  font-size: 16px;
-  font-weight: bold;
-}
-
 
 
