--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,7 +1,7 @@
 @import '@/variables.scss';
 
 .history{
-  flex: 1;
+  height: 100%;
   margin-top: 20px;
 }
 .historyTitle{
@@ -15,6 +15,7 @@
   background-color: $grey-bg;
 }
 .historyCard{
+  padding: 8px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
