--- a/src/pages/MainScreen/styles.module.scss
+++ b/src/pages/MainScreen/styles.module.scss
@@ -16,5 +16,15 @@
     font-weight: bold;
   }
 }
-
-
+.newExpense{
+  position: absolute;
+  min-width: 64px;
+  min-height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $blue;
+  border-radius: 500px;
+  bottom: 90px;
+  right: 12px;
+}
